# dq1

./: CMakeLists.txt  CmakeLists.txt  License.txt  README.md  dq1.hpp  dq1Config.cmake.in  test1.cpp  test2.cpp  test3.cpp
documents/: Pose.html
examples/: CMakeLists.txt  example1.cpp  example2.cpp  robot1.json
include/: ArmKinematics.hpp  Complex.h  DQ.h  DualNumber.h  DualNumber.hpp  DualQuaternion.h  DualQuaternion.hpp  Macro.h  Math.hpp  Pose.hpp  Quaternion.h  Quaternion.hpp  Scalar.h  SerialManipulatorKinematics.hpp  dq1.hpp
include/dq1/: Geometry.hpp  Kinematics.hpp  Macro.hpp  Modeling.hpp  MoterDrive.hpp  Pose copy.hpp  Pose.hpp  Pose2.hpp  Solver.hpp  _Internal.hpp
jsons/: robot1.json
robots/: robot1.json
src/: CMakeLists.txt  Complex.cpp  DQ.cpp  DualNumber.cpp  DualQuaternion.cpp  Geometry.cpp  Kinematics.cpp  Modeling.cpp  Quaternion.cpp  Solver.cpp  example1.cpp  pyWarpper.cpp
tests/: CMakeLists.txt
